# pic-share

./: .gitignore  LICENSE  README.md  README.zh-CN.md  picshare.spec  pyproject.toml
.github/workflows/: build.yml
packaging/: launcher.py
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/picshare/: __init__.py  __main__.py  config.py  desktop.py  gui.py  network.py  paths.py  preview.py  selections.py  settings.py  status.py  tokens.py
src/picshare/admin/: __init__.py  api.py  templates.py
src/picshare/web/: app.py  templates.py
tests/: test_preview.py  test_routes.py  test_tokens.py
