[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picshare"
version = "0.8.2"
description = "基于 IPv6 的私有照片共享服务器(极速预览 · 智能缓存 · 安全访问)"
readme = "README.md"
# 非商业许可，非 SPDX 标准清单内，用 LicenseRef 自定义标识（PEP 639）。
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.0",
    "Pillow>=9.0",
    "pywebview>=5.0",
    "waitress>=3.0",
    "qrcode>=7.0",
    # RAW 内嵌预览提取失败时的兜底解码（无内嵌预览的少数 RAW / 高清衍生图）
    "rawpy>=0.22",
    # Windows 上 pywebview 依赖 pythonnet（.NET 桥）。固定到稳定版，避免新版本
    # 与 clr_loader 不匹配导致 "Failed to resolve Python.Runtime.Loader.Initialize"。
    "pythonnet==3.0.3; sys_platform == 'win32'",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
picshare = "picshare.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]
